fix font overlap

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -77,6 +77,14 @@ body {
 	font-weight: 300;
 	background: #fff;
 }
+
+p {
+  font-size: 1.6rem;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 300;
+  background: #fff;
+}
+
 b, strong {
 	font-weight: 800;
 }
